# schmu

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: cli.rs  connection.rs  downloader.rs  main.rs  state.rs  ui.rs  util.rs
server/: Cargo.toml  README.md
server/src/: connections.rs  main.rs  server.rs  socket.rs  ytapi.rs
server/src/pages/: 404.html  submit.html  success.html
shared/: Cargo.toml
shared/src/: consts.rs  lib.rs
src/: cli.rs  connection.rs  downloader.rs  logger.rs  main.rs  player.rs  state.rs  ui.rs  util.rs
