[package]
name = "schmu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
dirs = "5.0.1"
image = "0.25.5"
libmpv2 = "4.1.0"
log = "0.4.22"
raylib = "5.0.2"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
