[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
axum = "0.8.1"
futures-util = "0.3.31"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
shared = { path = "../shared" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
ytmapi-rs = { version = "0.0.17", features = ["simplified-queries"] }
